# auto-3d-model

./: .gitignore  CLAUDE.md  README.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: README.md  pyproject.toml  requirements.txt  zbpack.json
backend/scripts/: check_oda.ps1  check_oda.sh
backend/src/: main.py
backend/src/api/: responses.py  routes.py
backend/src/lib/: annotations.py  filename.py  geometry.py  isometric_view.py  layers.py  watermark.py
backend/src/models/: flange_spec.py
backend/src/services/: dwg_exporter.py  dxf_builder.py  pdf_renderer.py  svg_renderer.py
backend/tests/: conftest.py
backend/tests/contract/: test_dwg.py  test_health.py  test_pdf.py  test_preview.py
backend/tests/integration/: test_edge_cases.py  test_performance.py  test_us1_preview.py  test_us2_download.py
backend/tests/quality_gates/: test_dimension_consistency.py  test_dwg_openable.py  test_dwg_version.py  test_geometry_integrity.py  test_hole_positions.py  test_structural_consistency.py
backend/tests/unit/: test_dxf_builder.py  test_filename.py  test_flange_spec.py  test_geometry.py
docs/req/: req-1.md
frontend/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FlangeForm.tsx  (+2 more)
specs/001-flange-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
