[project]
name = "flange-generator-backend"
version = "0.1.0"
description = "Blower inlet flange DWG/PDF/SVG generator backend"
requires-python = ">=3.11,<3.13"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
    "requires_oda: tests that require ODA File Converter installed",
]
